# Map

./: Cargo.toml  README.md  build-wasm.sh  index.html  performance_guide.rs
examples/: config_demo.rs  future_proofing_demo.rs  headless.rs  matrix_optimization_demo.rs  memory_budget_analysis.rs  memory_scaling_analysis.rs  per_object_culling_demo.rs  selective_caching_demo.rs  webgl_compatibility_demo.rs  webgl_compatibility_guide.rs
src/: lib.rs  main.rs  tri.wgsl
src/app/: mod.rs
src/app_v2/: mod.rs
src/renderable/: mesh.rs  mod.rs  renderable.rs  renderable_tests.rs  transforms.rs  vertex.rs
src/renderer/: camera.rs  camera_tests.rs  config.rs  config_tests.rs  dynamic_uniforms.rs  flexible.rs  gpu_context.rs  headless.rs  mod.rs  optimized.rs  pipeline.rs  render_core.rs  render_core_tests.rs  vertex_cache.rs
src/scene/: mod.rs  scene_tests.rs
src/shaders/: basic.wgsl
src/state/: mod.rs
src/vertex/: mod.rs
