[package]
name = "map"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["windowing"]
windowing = ["dep:winit"]  # Optional windowing system
headless = []              # Headless rendering mode

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.18", features = ["derive"] }
cfg-if = "1.0"
glam = "0.30.4"
log = "0.4.27"
web-time = "1.1.0"
wgpu = "26.0.1"
futures-channel = "0.3"

[dependencies.winit]
version = "0.30.11"
features = ["android-native-activity"]
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
pollster = "0.4.0"
futures-executor = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.js-sys]
version = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
